--- a/install
+++ b/install
@@ -3,7 +3,7 @@ set -e
 
 # Install script to install fn
 
-version="0.3.26"
+version=`curl --silent https://api.github.com/repos/fnproject/cli/releases/latest  | grep tag_name | cut -f 2 -d : | cut -f 2 -d '"'`
 
 command_exists() {
   command -v "$@" > /dev/null 2>&1
