--- a/install
+++ b/install
@@ -53,7 +53,7 @@ url='https://github.com/fnproject/cli/releases/download'
 case "$(uname)" in
   Linux)
     $sh_c "$curl /tmp/fn_linux $url/$version/fn_linux"
-    $sh_c "$mv /tmp/fn_linux /usr/local/bin/fn"
+    $sh_c "mv /tmp/fn_linux /usr/local/bin/fn"
     $sh_c "chmod +x /usr/local/bin/fn"
     fn --version
     ;;
